kubernetes/apps/keycloak/keycloak/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-keycloak-access
spec:
  from:
    - group: agentgateway.dev
      kind: AgentgatewayPolicy
      namespace: agentgateway-system
    - group: agentgateway.dev
      kind: AgentgatewayPolicy
      namespace: network
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      namespace: agentgateway-system
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: agentgateway-system
    - group: gateway.kgateway.dev
      kind: GatewayExtension
      namespace: network
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: network
  to:
    - group: ""
      kind: Service
      name: keycloak-http
