kubernetes/apps/keycloak/keycloak/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
spec:
  hostnames: ["auth.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: keycloak-http
          namespace: keycloak
          port: 8080
      timeouts:
        request: 60s
        backendRequest: 60s
      sessionPersistence:
        sessionName: KEYCLOAK_ROUTE
        type: Cookie
        absoluteTimeout: 3600s
        cookieConfig:
          lifetimeType: Permanent
